fix sidebar jumping

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -539,7 +539,6 @@ footer.site_footer p{margin: 15px 25px}
 
 .news .rich_view{
     padding: 60px 55px;
-    margin-top: -1px;
     border: 5px solid #F1F2F5;
 }
     .news .pinned{
